# markdown-converter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api/: README.md  main.py  render.yaml  requirements.txt  test_main.py
documents/: Resume.md  data.md  data.xlsx  notes.docx  notes.md  presentation.md  presentation.pptx
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: file-upload.tsx  markdown-preview.tsx
frontend/scripts/: convert.py
markdown_converter/: __init__.py  benchmark.py  chunking.py  cli.py  converter.py  embeddings.py  formatting.py  llm.py  logger.py  models.py  pipeline.py  rag.py  utils.py  vectordb.py  worker.py
tests/: test_formatting.py  test_utils.py
