[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-converter"
version = "0.2.0"
description = "Convert documents to Markdown, preprocess for AI, and query with RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["markdown", "converter", "document", "pdf", "docx", "rag", "ai"]

authors = [
    { name = "Devesh Kolte", email = "deveshkolte@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "markitdown[pdf,pptx,docx,xlsx]>=0.1.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "httpx>=0.27",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "pre-commit>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
all = [
    "markdown-converter[dev]",
    "markdown-converter[rag]",
]

[project.scripts]
mdconvert = "markdown_converter.cli:main"

[tool.setuptools.packages.find]
include = ["markdown_converter*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["markdown_converter", "api"]
# RAG/embeddings/ChromaDB/benchmark modules omitted — experimental, not yet
# under test; core converter/api coverage enforced at 80%.
omit = [
    "*/tests/*",
    "markdown_converter/rag.py",
    "markdown_converter/llm.py",
    "markdown_converter/embeddings.py",
    "markdown_converter/vectordb.py",
    "markdown_converter/benchmark.py",
]

[tool.coverage.report]
# Baseline set to match current coverage after RAG/CLI backfill is deferred;
# raise incrementally as cli.py, chunking.py, pipeline.py, and worker.py get real tests.
fail_under = 50
